# NyraCraft

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: vulkan-migration.md
src/: colorthing.rs  main.rs
src/app/: bootstrap.rs  console.rs  controls.rs  dropped_items.rs  logger.rs  menu.rs  mod.rs  save.rs  streaming.rs
src/content/blocks/: 1:10_cobblestone.json  1:11_glowstone.json  1:12_tall_grass.json  1:13_glass.json  1:1_stone.json  1:2_dirt.json  1:3_grass.json  1:4_log.json  1:5_leaves.json  1:6_planks_oak.json  1:7_crafting_table.json  1:8_gravel.json  1:9_sand.json
src/content/items/: 2:1_apple.json  2:2_stick.json  2:3_flint.json  2:4_flint_axe.json  2:5_flint_knife.json  2:6_flint_pickaxe.json  2:7_flint_shovel.json  2:8_flint_sword.json  2:9_plant_fiber.json
src/content/recipes/: 1_log_to_planks.json  2_stick_from_planks.json  3_crafting_table_from_planks.json  4_flint_knife.json  5_flint_axe.json  6_flint_pickaxe.json
src/physics/: collision.rs
src/player/: block_edit.rs  camera.rs  crafting.rs  inventory.rs  mod.rs  movement.rs
src/render/: atlas.rs  block.rs  gpu.rs  mesh.rs  mod.rs  texture.rs
src/shaders/: cube.wgsl  lines.wgsl  ui.wgsl
src/texturing/: atlas_gen.py  atlas_try.rs
src/world/: blocks.rs  mesher.rs  mod.rs  worldgen.rs
src/world/lightengine/: blocklight.rs  mod.rs  runtime.rs
